test/correct/Ord.hs
main = 
 (
     [
        [ 1 < 0
        , 1 < 1
        , 1 < 2
        ]
     ,  [ 1 > 0
        , 1 > 1
        , 1 > 2
        ]
     ,  [ 1 >= 0
        , 1 >= 1
        , 1 >= 2
        ]
     ,  [ 1 <= 0
        , 1 <= 1
        , 1 <= 2
        ]
     ]
 ,
     [  [ compare 1.0 2.0
        , compare 1.0 1.0
        , compare 2.0 1.0
        ]
     ,  [ compare 'a' 'b'
        , compare 'a' 'a'
        , compare 'd' 'a'
        ]
     ]
 ,
    [
        [ compare True True
        , compare True False
        , compare False True
        , compare False False
        ]
    ,
        [ compare () ()
        , compare () ()
        ] 
    ,   [ compare (1, 2) (1, 2)
        , compare (1, 2) (1, 1)
        , compare (1, 'a') (1, 'a')
        , compare (1, 'a') (1, 'b')
        , compare (2, 1) (1, 1)
        , compare ('a', 1) ('b', 1)
        ]
     ,  [ compare (1,1,1) (1,1,1)
        , compare (1,1,1) (1,1,2)
        , compare (1,1,1) (1,2,1)
        , compare (1,1,1) (2,1,1)
        ]
     ,  [ compare (1,1,1,1) (1,1,1,1)
        , compare (1,1,1,1) (1,1,1,2)
        , compare (1,1,1,1) (1,1,2,1)
        , compare (1,1,1,1) (1,2,1,1)
        , compare (1,1,1,1) (2,1,1,1)
        ]
     ,  [ compare (1,1,1,1,1) (1,1,1,1,1)
        , compare (1,1,1,1,1) (1,1,1,1,2)
        , compare (1,1,1,1,1) (1,1,1,2,1)
        , compare (1,1,1,1,1) (1,1,2,1,1)
        , compare (1,1,1,1,1) (1,2,1,1,1)
        , compare (1,1,1,1,1) (2,1,1,1,1)
        ]
     ,  [ compare (1,1,1,1,1,1) (1,1,1,1,1,1)
        , compare (1,1,1,1,1,1) (1,1,1,1,1,2)
        , compare (1,1,1,1,1,1) (1,1,1,1,2,1)
        , compare (1,1,1,1,1,1) (1,1,1,2,1,1)
        , compare (1,1,1,1,1,1) (1,1,2,1,1,1)
        , compare (1,1,1,1,1,1) (1,2,1,1,1,1)
        , compare (1,1,1,1,1,1) (2,1,1,1,1,1)
        ]
     ,  [ compare (1,1,1,1,1,1,1) (1,1,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1) (1,1,1,1,1,1,2)
        , compare (1,1,1,1,1,1,1) (1,1,1,1,1,2,1)
        , compare (1,1,1,1,1,1,1) (1,1,1,1,2,1,1)
        , compare (1,1,1,1,1,1,1) (1,1,1,2,1,1,1)
        , compare (1,1,1,1,1,1,1) (1,1,2,1,1,1,1)
        , compare (1,1,1,1,1,1,1) (1,2,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1) (2,1,1,1,1,1,1)
        ]
     ,  [ compare (1,1,1,1,1,1,1,1) (1,1,1,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1) (1,1,1,1,1,1,1,2)
        , compare (1,1,1,1,1,1,1,1) (1,1,1,1,1,1,2,1)
        , compare (1,1,1,1,1,1,1,1) (1,1,1,1,1,2,1,1)
        , compare (1,1,1,1,1,1,1,1) (1,1,1,1,2,1,1,1)
        , compare (1,1,1,1,1,1,1,1) (1,1,1,2,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1) (1,1,2,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1) (1,2,1,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1) (2,1,1,1,1,1,1,1)
        ]
     ,  [ compare (1,1,1,1,1,1,1,1,1) (1,1,1,1,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1) (1,1,1,1,1,1,1,1,2)
        , compare (1,1,1,1,1,1,1,1,1) (1,1,1,1,1,1,1,2,1)
        , compare (1,1,1,1,1,1,1,1,1) (1,1,1,1,1,1,2,1,1)
        , compare (1,1,1,1,1,1,1,1,1) (1,1,1,1,1,2,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1) (1,1,1,1,2,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1) (1,1,1,2,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1) (1,1,2,1,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1) (1,2,1,1,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1) (2,1,1,1,1,1,1,1,1)
        ]
     ,  [ compare (1,1,1,1,1,1,1,1,1,1) (1,1,1,1,1,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1,1) (1,1,1,1,1,1,1,1,1,2)
        , compare (1,1,1,1,1,1,1,1,1,1) (1,1,1,1,1,1,1,1,2,1)
        , compare (1,1,1,1,1,1,1,1,1,1) (1,1,1,1,1,1,1,2,1,1)
        , compare (1,1,1,1,1,1,1,1,1,1) (1,1,1,1,1,1,2,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1,1) (1,1,1,1,1,2,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1,1) (1,1,1,1,2,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1,1) (1,1,1,2,1,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1,1) (1,1,2,1,1,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1,1) (1,2,1,1,1,1,1,1,1,1)
        , compare (1,1,1,1,1,1,1,1,1,1) (2,1,1,1,1,1,1,1,1,1)
        ]
    ]
 ,
    [  
        [ [1,2] <= [1,2]
        , [1,2] > [1,1]
        , ['a','b'] > ['a','b']
        , ['a','b'] >= ['a','c']
        , [] <= [1]
        , [2] > []
        , [] > ([] :: [Int])
        ]
    ]
 )
    
    
    